fix: change gap for filter

--- a/Task_3/todo/assets/styles/block/filter.css
+++ b/Task_3/todo/assets/styles/block/filter.css
@@ -1,6 +1,6 @@
 .filter {
     display: flex;
-    gap: var(--gap);
+    gap: var(--gap-m);
     padding: var(--padding-xs) var(--padding);
     border-radius: var(--border-radius);
     background-color: var(--color-secondary);
